# QuadCopter

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
plans/: architecture.md
sim/: plot_results.py  run_sitl.py  test_attitude.py  test_hover.py
src/: CMakeLists.txt
src/core/: CMakeLists.txt  ahrs.cpp  ahrs.h  altitude_controller.cpp  altitude_controller.h  attitude_controller.cpp  attitude_controller.h  flight_controller.cpp  flight_controller.h  motor_mixer.cpp  motor_mixer.h  pid_controller.cpp  pid_controller.h
src/hal/: CMakeLists.txt  hal.h  hal_barometer.h  hal_imu.h  hal_logger.h  hal_motor.h  hal_timer.h
src/sitl/: CMakeLists.txt  physics_model.cpp  physics_model.h  sitl_barometer.cpp  sitl_barometer.h  sitl_imu.cpp  sitl_imu.h  sitl_logger.cpp  sitl_logger.h  sitl_main.cpp  sitl_motor.cpp  sitl_motor.h  sitl_timer.cpp  sitl_timer.h
tests/: CMakeLists.txt  test_ahrs.cpp  test_altitude_ctrl.cpp  test_attitude_ctrl.cpp  test_motor_mixer.cpp  test_pid.cpp
